fix: fixed pom.xml for VS Code